--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
   <title>Clock</title>
+
   <style>
     html, body {
       margin: 0;
@@ -17,6 +19,7 @@
       justify-content: center;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     }
+
     #clock {
       font-size: 20vw;
       letter-spacing: 0.05em;
@@ -24,9 +27,11 @@
     }
   </style>
 </head>
+
 <body>
   <div id="clock"></div>
 
+  <!-- CLOCK LOGIC -->
   <script>
     function updateClock() {
       const now = new Date();
@@ -34,8 +39,18 @@
       const m = String(now.getMinutes()).padStart(2, '0');
       document.getElementById('clock').textContent = `${h}:${m}`;
     }
+
     updateClock();
     setInterval(updateClock, 1000);
   </script>
+
+  <!-- PWA SERVICE WORKER -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('service-worker.js');
+      });
+    }
+  </script>
 </body>
-  </html>
+</html>
